@@ -3,10 +3,12 @@ package com.product.productservice.service.impl;
 import com.product.productservice.converter.ProductConverter;
 import com.product.productservice.dto.ProductDTO;
 import com.product.productservice.entity.CategoryEntity;
+import com.product.productservice.entity.FavoriteProductEntity;
 import com.product.productservice.entity.ProductEntity;
 import com.product.productservice.models.ProductSearchRequest;
 import com.product.productservice.models.ProductSpecification;
 import com.product.productservice.repository.CategoryRepository;
+import com.product.productservice.repository.FavoriteProductRepository;
 import com.product.productservice.repository.ProductRepository;
 import com.product.productservice.repository.repositorycustom.ProductRepositoryCustom;
 import com.product.productservice.service.IProductService;
@@ -37,6 +39,10 @@ public class ProductServiceImpl implements IProductService {
 
     @Autowired
     private UploadFileUtils uploadFileUtils;
+
+
+    @Autowired
+    private FavoriteProductRepository favoriteRepo;
     @Override
     public ProductDTO createOrUpdateProduct(ProductDTO productDto)
     {
@@ -88,10 +94,18 @@ public class ProductServiceImpl implements IProductService {
     }
 
     @Override
-    public ProductDTO getProductById(Long id) {
-        return productRepository.findById(id)
-                .map(productConverter::convertToDto)
-                .orElse(null);
+    public ProductDTO getProductById(Long id, Long userId) {
+        ProductEntity product = productRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Không tìm thấy sản phẩm"));
+
+        ProductDTO dto = productConverter.convertToDto(product);
+
+        if (userId != null) {
+            boolean isFav = favoriteRepo.existsByUserIdAndProductId(userId, id);
+            dto.setIsFavorite(isFav);
+        }
+
+        return dto;
     }
 
     @Override
@@ -101,13 +115,19 @@ public class ProductServiceImpl implements IProductService {
                 .collect(Collectors.toList());
     }
 
+
+    // Lấy danh sách sản phẩm theo danh mục
     @Override
-    public List<ProductDTO> getProductsByCategory(Long categoryId) {
-        Optional<CategoryEntity> category = categoryRepository.findById(categoryId);
-        return category.map(cat -> cat.getProducts().stream()
-                        .map(productConverter::convertToDto)
-                        .collect(Collectors.toList()))
-                .orElse(List.of());
+    public List<ProductDTO> getProductsByCategory(Long categoryId, Long userId) {
+        List<ProductEntity> products = productRepository.findByCategoryId(categoryId); // tùy bạn viết
+        List<ProductDTO> dtos = products.stream().map(productConverter::convertToDto).toList();
+
+        if (userId != null) {
+            List<Long> favoriteIds = favoriteRepo.findByUserId(userId).stream()
+                    .map(FavoriteProductEntity::getProductId).toList();
+            dtos.forEach(p -> p.setIsFavorite(favoriteIds.contains(p.getId())));
+        }
+        return dtos;
     }
 
     @Override
@@ -174,15 +194,58 @@ public class ProductServiceImpl implements IProductService {
     }
 
     @Override
-    public List<ProductDTO> advancedSearchProducts(ProductSearchRequest request) {
+    public List<ProductDTO> advancedSearchProducts(ProductSearchRequest request, Long userId) {
         List<ProductEntity> products = productRepository.advancedSearch(request);
-        return products.stream().map(productConverter::convertToDto).toList();
+        List<ProductDTO> result = products.stream()
+                .map(productConverter::convertToDto)
+                .collect(Collectors.toList());
+
+        if (userId != null) {
+            // Lấy danh sách ID sản phẩm đã được user yêu thích
+            List<Long> favoriteIds = favoriteRepo.findByUserId(userId)
+                    .stream()
+                    .map(FavoriteProductEntity::getProductId)
+                    .toList();
+
+            // Gắn cờ isFavorite cho từng sản phẩm trong kết quả
+            result.forEach(dto -> dto.setIsFavorite(favoriteIds.contains(dto.getId())));
+        }
+
+        return result;
     }
 
     // Get filter options for advanced search
     @Override
     public Map<String, List<String>> getFilterOptions() {
         return productRepository.getFilterOptions();
+    }
+
+    @Override
+    public List<ProductDTO> getAllProductsWithFavorites(Long userId) {
+        List<Long> favoriteIds = favoriteRepo.findByUserId(userId).stream()
+                .map(FavoriteProductEntity::getProductId)
+                .toList();
+
+        return productRepository.findAll().stream()
+                .map(p -> {
+                    ProductDTO dto = productConverter.convertToDto(p);
+                    dto.setIsFavorite(favoriteIds.contains(p.getId()));
+                    return dto;
+                })
+                .collect(Collectors.toList());
+
+    }
+
+    @Override
+    public List<ProductDTO> getProductsByIds(List<Long> ids) {
+        return productRepository.findAllById(ids).stream()
+                .map(productConverter::convertToDto)
+                .collect(Collectors.toList());
+    }
+
+    @Override
+    public boolean existsById(Long productId) {
+        return productRepository.existsById(productId);
     }
 }
 
